# JetStreamProto

./: Development Session - 2025-11-22.md  JetStreamProto 1.0.md  README.md  RELEASE_NOTES.md  RELEASE_v0.5.0.md  RELEASE_v0.5.0_RU.md  Status Report - Detailed v0.1.md  Status Report - v0.1.md  Status Report - v0.3.0.md  Status Report - v0.3.1.md  Walkthrough - Advanced Features.md  Walkthrough - Congestion Control.md  Walkthrough - Delivery Modes.md  Walkthrough - Successful Testing.md  Walkthrough - Testing and Stabilization.md  Walkthrough - Интеграция криптографии.md  Walkthrough - Серверная часть.md  test.rs  Доработки протокола.md  Структура доработки протокола.md  Финальные доработки.md  дополнение к JetStreamProto.md
jetstream_examples/: Cargo.toml
jetstream_proto/: .gitignore  BANNER.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  PROMETHEUS_METRICS.md  README.md  RELEASE_NOTES_v0.6.0.md  WEBRTC_TRANSPORT.md  clippy_output.txt  received_test_transfer.txt
jetstream_proto/docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md  PERFORMANCE_RU.md  PROTOCOL_COMPARISON(v0.5.0).md  PROTOCOL_COMPARISON_RU(v0.5.0).md  PROTOCOL_COMPARISON_RU.md
jetstream_proto/examples/: chat_client.rs  chat_server.rs
jetstream_proto/jetstream_examples/: Cargo.toml  MULTIHOP_QUICKSTART.md  MULTIHOP_README.md  http3_demo.rs  load_balancer_demo.rs  mptcp_demo.rs  multihop_config.yaml  multihop_demo.rs  otel_demo.rs  prometheus_demo.rs  webrtc_demo.rs
jetstream_proto/jetstream_examples/examples/: client_example.rs  file_transfer_example.rs  server_example.rs
jetstream_proto/jsp_benchmarks/: Cargo.toml
jetstream_proto/jsp_benchmarks/benches/: compression.rs  concurrent_connections.rs  latency.rs  memory.rs  serialization_bench.rs  throughput.rs  zero_copy.rs
jetstream_proto/jsp_benchmarks/src/: lib.rs
jetstream_proto/jsp_c/: Cargo.toml  README.md  build.rs  jetstream_proto.h
jetstream_proto/jsp_c/src/: lib.rs
jetstream_proto/jsp_cli/: Cargo.toml  README.md
jetstream_proto/jsp_cli/src/: main.rs
jetstream_proto/jsp_cli/src/commands/: config.rs  mod.rs  monitor.rs  profile.rs  send.rs
jetstream_proto/jsp_core/: Cargo.toml  build.rs
jetstream_proto/jsp_core/benches/: codec_benchmark.rs
jetstream_proto/jsp_core/src/: codec.rs  compression_selector.rs  crypto.rs  crypto_selector.rs  crypto_test.rs  double_ratchet.rs  fec.rs  lib.rs  qos.rs  replay_protection.rs  session.rs  session_test.rs  signatures.rs  stream.rs  transfer.rs
jetstream_proto/jsp_core/src/compression/: header_compression.rs  mod.rs  payload_compression.rs  varint.rs
jetstream_proto/jsp_core/src/serialization/: flatbuffers_codec.rs  mod.rs
jetstream_proto/jsp_core/src/types/: connection_id.rs  control.rs  delivery.rs  frame.rs  handshake.rs  handshake_test.rs  header.rs  mod.rs  path_validation.rs  stun.rs  turn.rs
jetstream_proto/jsp_cpp/: Cargo.toml  build.rs
jetstream_proto/jsp_cpp/include/: jetstream.h
jetstream_proto/jsp_cpp/src/: jetstream.cc  lib.rs
jetstream_proto/jsp_gateway/: Cargo.toml
jetstream_proto/jsp_gateway/src/: balancer.rs  config.rs  lib.rs  main.rs  proxy.rs
jetstream_proto/jsp_gateway/tests/: integration.rs
jetstream_proto/jsp_go/: README.md  go.mod  jetstream.go  jetstream_test.go
jetstream_proto/jsp_integration_tests/: Cargo.toml
jetstream_proto/jsp_integration_tests/src/: lib.rs
jetstream_proto/jsp_integration_tests/src/common/: mod.rs  test_client.rs  test_server.rs
jetstream_proto/jsp_integration_tests/tests/: congestion_tests.rs  edge_case_tests.rs  end_to_end.rs  failure_scenarios.rs  file_transfer_tests.rs  handshake_tests.rs  mobility_test.rs  multiplexing_tests.rs  p2p_test.rs  rate_limit_tests.rs  security_tests.rs  stress_test.rs  stun_tests.rs
jetstream_proto/jsp_ios/: Cargo.toml
jetstream_proto/jsp_ios/ios/: JetStreamConnection.swift
jetstream_proto/jsp_ios/src/: lib.rs
jetstream_proto/jsp_java/: Cargo.toml
jetstream_proto/jsp_java/src/: lib.rs
jetstream_proto/jsp_operator/: Cargo.toml
jetstream_proto/jsp_operator/src/: controller.rs  crd.rs  main.rs
jetstream_proto/jsp_python/: Cargo.toml  README.md  pyproject.toml
jetstream_proto/jsp_python/examples/: client.py  server.py
jetstream_proto/jsp_python/src/: lib.rs
jetstream_proto/jsp_storage/: Cargo.toml
jetstream_proto/jsp_storage/src/: delivery.rs  lib.rs  merkle_tree.rs  message_queue.rs  object_store.rs  replication.rs
jetstream_proto/jsp_swift/: Cargo.toml  build.rs
jetstream_proto/jsp_swift/src/: jsp_swift.udl  lib.rs
jetstream_proto/jsp_sync/: Cargo.toml
jetstream_proto/jsp_sync/src/: conflict.rs  crdt.rs  delta.rs  lib.rs  snapshot.rs
jetstream_proto/jsp_transport/: Cargo.toml
jetstream_proto/jsp_transport/benches/: compression_bench.rs  multihop_bench.rs
jetstream_proto/jsp_transport/src/: adaptive.rs  bbr.rs  circuit_breaker.rs  config.rs  congestion.rs  connection.rs  ddos_protection.rs  fallback_detector.rs  heartbeat.rs  ice.rs  ip_blacklist.rs  lib.rs  logging.rs  memory_pool.rs  metrics.rs  mtu_discovery.rs  negotiation.rs  network_status.rs  path_validator.rs  pow.rs  priority_queue.rs  quic_cert.rs  quic_transport.rs  rate_limit.rs  reliability.rs  server.rs  signaling.rs  stun_server.rs  tcp_transport.rs  transport.rs  transport_selector.rs  turn_client.rs  turn_server.rs  udp.rs
jetstream_proto/jsp_transport/src/compression/: adaptive.rs  mod.rs
jetstream_proto/jsp_transport/src/http3/: frame.rs  mod.rs  request.rs  response.rs  server.rs
jetstream_proto/jsp_transport/src/load_balancer/: algorithms.rs  balancer.rs  health.rs  mod.rs
jetstream_proto/jsp_transport/src/mptcp/: manager.rs  mod.rs  scheduler.rs  subflow.rs  watcher.rs
jetstream_proto/jsp_transport/src/multihop/: buffer_pool.rs  config.rs  controller.rs  engine.rs  (+7 more)
jetstream_proto/jsp_transport/tests/: integration_test.rs  mobile_integration.rs  multihop_integration.rs
jetstream_proto/jsp_wasm/: Cargo.toml  README.md  README_TYPESCRIPT.md  jetstream_proto.d.ts  package.json
jetstream_proto/jsp_wasm/src/: lib.rs
jetstream_proto/schemas/: messages.fbs
jetstream_proto/src/: lib.rs
(+15 files in other folders)
