[package]
name = "jetstream_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsp_core = { path = "../jsp_core" }
jsp_transport = { path = "../jsp_transport" }
