[workspace]
members = [
    "jsp_core",
    "jsp_transport",
    "jetstream_examples",
    "jsp_integration_tests", "jsp_benchmarks", "jsp_gateway", "jsp_wasm", "jsp_storage", "jsp_sync", "jsp_c", "jsp_python", "jsp_cli", "jsp_cpp", "jsp_java", "jsp_swift",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
