[package]
name = "jsp_benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
jsp_core = { path = "../jsp_core" }
jsp_transport = { path = "../jsp_transport" }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
bytes = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "zero_copy"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "concurrent_connections"
harness = false
