[package]
name = "jsp_c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
jsp_core = { path = "../jsp_core" }
jsp_transport = { path = "../jsp_transport" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"
