[package]
name = "jsp_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jsp-cli"
path = "src/main.rs"

[dependencies]
jsp_core = { path = "../jsp_core" }
jsp_transport = { path = "../jsp_transport" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tabled = "0.15"
colored = "2.1"
