[package]
name = "jsp_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
bytes = { version = "1.0", features = ["serde"] }
serde_cbor = "0.11"
anyhow = "1.0"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["std"] }
hkdf = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
getrandom = "0.2"
lz4_flex = "0.11"
reed-solomon-erasure = "6.0"
flatbuffers = "25.9"



[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "codec_benchmark"
harness = false
