[package]
name = "jsp_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
jsp_core = { path = "../jsp_core" }
jsp_transport = { path = "../jsp_transport" }
dashmap = "5.5"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
