[package]
name = "jsp_integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
jsp_core = { path = "../jsp_core" }
jsp_transport = { path = "../jsp_transport" }
tokio = { workspace = true, features = ["test-util"] }
anyhow = { workspace = true }
tracing = "0.1"
serde_cbor = "0.11"
tempfile = "3.8"
rand = "0.8"
getrandom = "0.2"

[dev-dependencies]
tracing-subscriber = "0.3"

[[test]]
name = "mobility_test"
path = "tests/mobility_test.rs"
