[package]
name = "jsp_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "jetstream_proto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
jsp_core = { path = "../jsp_core" }
jsp_transport = { path = "../jsp_transport" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
