[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jetstream-proto"
version = "0.1.0"
description = "Python bindings for JetStreamProto - A high-performance UDP protocol"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["networking", "udp", "protocol", "jetstream"]
authors = [
    {name = "JetStreamProto Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/yourusername/jetstream-proto"
Repository = "https://github.com/yourusername/jetstream-proto"

[tool.maturin]
features = ["pyo3/extension-module"]
