[package]
name = "jsp_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sled = "0.34"
async-trait = "0.1"
sha2 = "0.10"
jsp_core = { path = "../jsp_core" }
