[package]
name = "jsp_swift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "jsp_swift"

[dependencies]
uniffi = { version = "0.25", features = ["cli"] }
jsp_core = { path = "../jsp_core" }
jsp_transport = { path = "../jsp_transport" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }
