[package]
name = "jsp_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
jsp_core = { path = "../jsp_core" }
jsp_storage = { path = "../jsp_storage" }
sha2 = "0.10"
