[package]
name = "jsp_transport"
version = "0.1.0"
edition = "2021"

[dependencies]
jsp_core = { path = "../jsp_core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_cbor = "0.11"
bytes = "1.11.0"
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
getrandom = "0.2"
socket2 = "0.5"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
sha2 = "0.10"

# Multi-hop dependencies
async-trait = "0.1"
serde_yaml = "0.9"
thiserror = "1.0"
if-addrs = "0.10"
# Note: boringtun and shadowsocks-rust can be added later for full implementation
# boringtun = "0.6"
# shadowsocks-rust = "1.18"

# Prometheus metrics
prometheus = "0.13"
once_cell = "1.19"
hyper = { version = "0.14", features = ["full"] }


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "multihop_bench"
harness = false
